--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 title: "Risale Notları"
 description: "Risale-i Nurları okurken, dinlerken, düşünürken, hakkındaki derslerden alınan notlar..."
-github_username: risalenotlari
+github_username: 
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "blog"
 
